# GoIT_WEB_HW_10

./: .gitignore  README.md  pyproject.toml
hw_10_website/: manage.py
hw_10_website/fixtures/: authors.json  quotes.json  tags.json
hw_10_website/hw_10_website/: asgi.py  settings.py  urls.py  wsgi.py
hw_10_website/quotes/: forms.py  models.py  urls.py  views.py
hw_10_website/quotes/migrations/: 0001_initial.py  0002_alter_author_born_date_alter_author_born_location_and_more.py
hw_10_website/quotes/templates/quotes/: author.html  base.html  index.html  profile.html  quote.html  top_tags.html
hw_10_website/users/: forms.py  urls.py  views.py
hw_10_website/users/templates/users/: login.html  signup.html
hw_10_website/utils/: custom_migration.py
